# week_calendar_cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Examples.md  LICENSE-APACHE  LICENSE-MIT  MANUAL.txt  README.md  README_copy.md  ci_checks.sh  justfile
.github/workflows/: ci_check.yml  spelling.yml
resources/: README_TEMPLATE.md  TEMPLATE_DATA.toml
resources/documentation/: sub_command_week_number_example_help.txt
resources/main_help/: about.txt  end_of_help.txt
resources/sub_command_example/: today.txt  week_number.txt
src/: calendar_week_operations.rs  chrono_utils.rs  cli.rs  lib.rs  macros.rs  main.rs  simple_parseable_week_calendar.rs  validated_week_number.rs  week_calendar_result.rs  week_with_calendar_number.rs
src/cli/: given_date.rs  given_month.rs  given_week_number.rs  given_year.rs  sub_commands.rs
src/snapshots/: week_calendar__week_with_calendar_number__testing__all_weeks_in_year_1992.snap  week_calendar__week_with_calendar_number__testing__new_within_months.snap  week_calendar__week_with_calendar_number__testing__new_within_months_at_end_of_year_2022.snap  week_calendar__week_with_calendar_number__testing__new_within_months_at_end_of_year_2023.snap  week_calendar__week_with_calendar_number__testing__new_within_months_from_earlier_year.snap  week_calendar__week_with_calendar_number__testing__new_within_monts.snap
xtask/: Cargo.toml
xtask/src/: build_readme.rs  cli.rs  generate_manual.rs  lib.rs  main.rs  template.rs
