[package]
name = "week_calendar"
authors = ["BoolPurist"]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.64.0"
categories = ["command-line-utilities", "week-calendar"]
keywords = ["calendar", "cli", "week"]

description = """
week_calendar is a command line tool which shows calendar weeks. 
It provides the number of week and from which day it starts and on which day a week ends.
Different intervals can be chosen. Year, month, or just one specific week.
"""

repository = "https://github.com/BoolPurist/week_calendar_cli"
documentation = "https://github.com/BoolPurist/week_calendar_cli"
homepage = "https://github.com/BoolPurist/week_calendar_cli"

exclude = ["ci_check.sh"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

date_validation_types = { version = "2.0.0", features = ["chrono"] }

chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env"] }
prettytable = "0.10.0"
thiserror = "1.0.63"

[dev-dependencies]
insta = { version = "1.39.0" }
pretty_assertions = "1.4.0"
